// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders ./src/anchor/demo/basic.vue correctly 1`] = `
"<div data-measure-status="0">
  <!---->
  <div class="css-dev-only-do-not-override-1p3hq3p">
    <div class="css-dev-only-do-not-override-1p3hq3p xy-anchor-wrapper" style="max-height: 100vh;">
      <div class="xy-anchor"><span class="xy-anchor-ink"></span>
        <div class="xy-anchor-link"><a class="xy-anchor-link-title" href="#part-1" title=""><span style="color: red;">Part 1</span></a>
          <!---->
        </div>
        <div class="xy-anchor-link"><a class="xy-anchor-link-title" href="#part-2" title="Part 2">Part 2</a>
          <!---->
        </div>
        <div class="xy-anchor-link"><a class="xy-anchor-link-title" href="#part-3" title="Part 3">Part 3</a>
          <!---->
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`renders ./src/anchor/demo/customizeHighlight.vue correctly 1`] = `
"<div class="css-dev-only-do-not-override-1p3hq3p xy-anchor-wrapper" style="max-height: 100vh;">
  <div class="xy-anchor xy-anchor-fixed"><span class="xy-anchor-ink"></span>
    <div class="xy-anchor-link"><a class="xy-anchor-link-title" href="#components-anchor-demo-basic" title="Basic demo">Basic demo</a>
      <!---->
    </div>
    <div class="xy-anchor-link"><a class="xy-anchor-link-title" href="#components-anchor-demo-static" title="Static demo">Static demo</a>
      <!---->
    </div>
    <div class="xy-anchor-link"><a class="xy-anchor-link-title" href="#api" title="API">API</a>
      <div class="xy-anchor-link"><a class="xy-anchor-link-title" href="#anchor-props" title="Anchor Props">Anchor Props</a>
        <!---->
      </div>
      <div class="xy-anchor-link"><a class="xy-anchor-link-title" href="#link-props" title="Link Props">Link Props</a>
        <!---->
      </div>
    </div>
  </div>
</div>"
`;

exports[`renders ./src/anchor/demo/horizontal.vue correctly 1`] = `
"<div>
  <div data-measure-status="0">
    <!---->
    <div class="css-dev-only-do-not-override-1p3hq3p">
      <div class="css-dev-only-do-not-override-1p3hq3p xy-anchor-wrapper xy-anchor-wrapper-horizontal" style="max-height: 100vh;">
        <div class="xy-anchor"><span class="xy-anchor-ink"></span>
          <div class="xy-anchor-link"><a class="xy-anchor-link-title" href="#horizontally-part-1" title="Part 1">Part 1</a>
            <!---->
          </div>
          <div class="xy-anchor-link"><a class="xy-anchor-link-title" href="#horizontally-part-2" title="Part 2">Part 2</a>
            <!---->
          </div>
          <div class="xy-anchor-link"><a class="xy-anchor-link-title" href="#horizontally-part-3" title="Part 3">Part 3</a>
            <!---->
          </div>
          <div class="xy-anchor-link"><a class="xy-anchor-link-title" href="#horizontally-part-4" title="Part 4">Part 4</a>
            <!---->
          </div>
          <div class="xy-anchor-link"><a class="xy-anchor-link-title" href="#horizontally-part-5" title="Part 5">Part 5</a>
            <!---->
          </div>
          <div class="xy-anchor-link"><a class="xy-anchor-link-title" href="#horizontally-part-6" title="Part 6">Part 6</a>
            <!---->
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`renders ./src/anchor/demo/onChange.vue correctly 1`] = `
"<div class="css-dev-only-do-not-override-1p3hq3p xy-anchor-wrapper" style="max-height: 100vh;">
  <div class="xy-anchor xy-anchor-fixed"><span class="xy-anchor-ink"></span>
    <div class="xy-anchor-link"><a class="xy-anchor-link-title" href="#components-anchor-demo-basic" title="Basic demo">Basic demo</a>
      <!---->
    </div>
    <div class="xy-anchor-link"><a class="xy-anchor-link-title" href="#components-anchor-demo-static" title="Static demo">Static demo</a>
      <!---->
    </div>
    <div class="xy-anchor-link"><a class="xy-anchor-link-title" href="#api" title="API">API</a>
      <div class="xy-anchor-link"><a class="xy-anchor-link-title" href="#anchor-props" title="Anchor Props">Anchor Props</a>
        <!---->
      </div>
      <div class="xy-anchor-link"><a class="xy-anchor-link-title" href="#link-props" title="Link Props">Link Props</a>
        <!---->
      </div>
    </div>
  </div>
</div>"
`;

exports[`renders ./src/anchor/demo/onClick.vue correctly 1`] = `
"<div class="css-dev-only-do-not-override-1p3hq3p xy-anchor-wrapper" style="max-height: 100vh;">
  <div class="xy-anchor xy-anchor-fixed"><span class="xy-anchor-ink"></span>
    <div class="xy-anchor-link"><a class="xy-anchor-link-title" href="#components-anchor-demo-basic" title="Basic demo">Basic demo</a>
      <!---->
    </div>
    <div class="xy-anchor-link"><a class="xy-anchor-link-title" href="#components-anchor-demo-static" title="Static demo">Static demo</a>
      <!---->
    </div>
    <div class="xy-anchor-link"><a class="xy-anchor-link-title" href="#api" title="API">API</a>
      <div class="xy-anchor-link"><a class="xy-anchor-link-title" href="#anchor-props" title="Anchor Props">Anchor Props</a>
        <!---->
      </div>
      <div class="xy-anchor-link"><a class="xy-anchor-link-title" href="#link-props" title="Link Props">Link Props</a>
        <!---->
      </div>
    </div>
  </div>
</div>"
`;

exports[`renders ./src/anchor/demo/static.vue correctly 1`] = `
"<div class="css-dev-only-do-not-override-1p3hq3p xy-anchor-wrapper" style="max-height: 100vh;">
  <div class="xy-anchor xy-anchor-fixed"><span class="xy-anchor-ink"></span>
    <div class="xy-anchor-link"><a class="xy-anchor-link-title" href="#components-anchor-demo-basic" title="Basic demo">Basic demo</a>
      <!---->
    </div>
    <div class="xy-anchor-link"><a class="xy-anchor-link-title" href="#components-anchor-demo-static" title="Static demo">Static demo</a>
      <!---->
    </div>
    <div class="xy-anchor-link"><a class="xy-anchor-link-title" href="#api" title="API">API</a>
      <div class="xy-anchor-link"><a class="xy-anchor-link-title" href="#anchor-props" title="Anchor Props">Anchor Props</a>
        <!---->
      </div>
      <div class="xy-anchor-link"><a class="xy-anchor-link-title" href="#link-props" title="Link Props">Link Props</a>
        <!---->
      </div>
    </div>
  </div>
</div>"
`;

exports[`renders ./src/anchor/demo/targetOffset.vue correctly 1`] = `
"<div data-measure-status="0">
  <!---->
  <div class="css-dev-only-do-not-override-1p3hq3p">
    <div class="css-dev-only-do-not-override-1p3hq3p xy-anchor-wrapper" style="max-height: 100vh;">
      <div class="xy-anchor"><span class="xy-anchor-ink"></span>
        <div class="xy-anchor-link"><a class="xy-anchor-link-title" href="#components-anchor-demo-basic" title="Basic demo">Basic demo</a>
          <!---->
        </div>
        <div class="xy-anchor-link"><a class="xy-anchor-link-title" href="#components-anchor-demo-static" title="Static demo">Static demo</a>
          <!---->
        </div>
        <div class="xy-anchor-link"><a class="xy-anchor-link-title" href="#api" title="API">API</a>
          <div class="xy-anchor-link"><a class="xy-anchor-link-title" href="#anchor-props" title="Anchor Props">Anchor Props</a>
            <!---->
          </div>
          <div class="xy-anchor-link"><a class="xy-anchor-link-title" href="#link-props" title="Link Props">Link Props</a>
            <!---->
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;
